# yolov8-onnx-cpp

./: .gitignore  CMakeLists.txt
cmake/fetch/: onnx.cmake
include/nn/: autobackend.h  onnx_model_base.h
src/: main.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
